--- a/Leads tracker/index.html
+++ b/Leads tracker/index.html
@@ -8,8 +8,10 @@
     <link rel="icon" href="images/icon.png">
   </head>
   <body>
-    <input type="text" id="input-el" />
+   <input type="text" id="input-el" />
     <button id="input-btn">SAVE INPUT</button>
+     <button id="tab-btn">SAVE TAB</button>
+    <button id="delete-btn">Delete All</button>
     <ul id="ul-el"></ul>
      <script src="script.js"></script>
   </body>
